# DistDL

./: .clang-tidy  .gitmodules  CMakeLists.txt  PreLoad.cmake
ci/check/: run_license_format.py
cmake/: distdl.cmake  distdl_glob_sources.cmake  git_version.cmake  pybind11.cmake  python.cmake  target.cmake  tools.cmake  util.cmake  warnings.cmake
cmake/linux/: default_libs.cmake  toolchain-x86_64.cmake
contrib/: CMakeLists.txt
contrib/fmtlib-cmake/: CMakeLists.txt
contrib/gflags-cmake/: CMakeLists.txt
contrib/glog-cmake/: CMakeLists.txt
contrib/jemalloc-cmake/: CMakeLists.txt
contrib/libcxx-cmake/: CMakeLists.txt
contrib/libcxxabi-cmake/: CMakeLists.txt
contrib/libunwind-cmake/: CMakeLists.txt
contrib/pybind11-cmake/: CMakeLists.txt
python/: Makefile  setup.py
python/distdl/: __init__.py  version.py
python/distdl/_C/: __init__.py
src/: CMakeLists.txt
src/api/common/: test_api_common.cc
src/api/python/: distdl_api_registry.cc  distdl_api_registry.hh  flags.cc  init.cc  reg_test.cc
src/api/python/numpy/: init_numpy_c_api.cc
src/core/common/: preprocessor.hh  symbol.hh  test_common.cc  throw.h
src/core/job/: env_global_objects_scope.cc  env_global_objects_scope.hh
src/extension/: test_extension.cc
src/extension/python/: numpy.cc  numpy.hh  numpy_internal.hh
tools/: clean_generated_api.py  generate_pip_version.py
